--- a/style.css
+++ b/style.css
@@ -1,4 +1,91 @@
 * {
+  box-sizing: border-box;
+}
+
+body {
   background-color: black;
   color: white;
+  height: 100vh;
+  padding: 5px;
+  margin: 0;
+}
+
+article {
+  margin: .5rem 0;
+  background-color: dimgray;
+  text-align: justify;
+  box-shadow: 0px 0px 2px 0px black;
+}
+
+article summary {
+  text-align: center;
+}
+
+article img {
+  display: block;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+article p {
+  padding: 0 !important;
+}
+
+.page-wrap {
+  height: calc(100vh - 10px);
+  display: grid;
+  background-color: black;
+  display: grid;
+  grid-template-columns: minmax(10px, 1fr) minmax(10px, 3fr);
+  grid-template-rows: min-content min-content 1fr min-content;
+  gap: 1px;
+  text-align: center;
+}
+
+.page-wrap * {
+  padding: 1rem;
+}
+
+.page-header {
+  grid-column: 1 /-1;
+  background: grey;
+  padding-bottom: 2rem;
+  text-decoration: underline;
+  font-size: 4rem;
+  color: darkblue;
+}
+
+.page-sidebar {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  background: grey;
+}
+
+.page-nav {
+  grid-column: 2 / 3;
+  background: grey;
+}
+
+a {
+  text-decoration: none;
+  color: cyan;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.page-main {
+  grid-column: 2 / 3;
+  background: grey;
+}
+
+.page-footer {
+  grid-column: 1 / -1;
+  background: grey;
+  color: black;
+}
+
+.details p {
+  text-align: left;
 }
